# TaijiOS

./: .gitignore  .gitmodules  Dockerfile.build  KRBVIEW_QUICKSTART.md  KRB_VIEWER_FIX.md  Makefile  README.KRB.md  README.md  ast.dis  build_lua_vm.sh  clock.dis  clock.sbl  compile_krbview.sh  init.f  krbview.dis  kryon.sbl  launch_krbview.sh  launch_krbview_nix.sh  mkconfig  mkfile  remove_c_krbview.sh  run-appimage.sh  run-wm.sh  run.sh  run_krbview.sh  run_krbview_nix.sh  run_yaml_test.sh  shell.nix  shell.sh  std.dis  std.sbl  test.krb  test.yaml  test_limbo_build.sh
.github/workflows/: appimage.yml
android-port/: DIS_VM_ARM64.md  KRYON_ANDROID.md  OPTIMIZATION.md  QUICKSTART.md  README.md  TESTING.md  WM_ANDROID.md  build-android.sh  build.gradle  release.sh  settings.gradle
android-port/app/: build.gradle  proguard-rules.pro
android-port/app/src/main/cpp/: CMakeLists.txt  android_test.c  os.c
android-port/fdroid/: metadata.xml
appl/: mkfile
appl/acme/: acme.b  frame.b  frame.m  mkfile  test.c  test.m  text.b
appl/alphabet/: mkfile
appl/cmd/: build-all.sh  build-clean.sh  directdraw.b  getfile.b  install-all.sh  mkfile  promptstring.b  simpledraw.b  yacc.b
appl/collab/: mkfile
appl/examples/: button.kry  colortest.kry  directtest.kry  hello.b  hello.kry  minimal.kry  mkfile  simple.kry  test.kry  testsimple.kry
appl/grid/: mkfile
appl/kryon/: .gitignore  frametest.kry  simpletest.kry  test_var.kry  windowtest.kry
appl/lib/: mkfile  palm.b  syntax.b  syntax.m  (+5 more)
dis/: init
emu/Android/: Android.mk  CMakeLists.txt  README.md  android_main.c  asm-arm64.S  devaudio.c  deveia.c  devfs.c  devip.c  devwmctx.c  emu-g.c  mkfile  mkfile-arm64  os.c  os.h  segflush-arm64.c  test_dis.c  win.c  wm.c  wm.h
include/: draw.h  kern.h  kernel.h  krb.h  krb_render.h  krb_runtime.h  krb_shell.h  krb_types.h  krbview.h  lib9.h  libsec.h  memdraw.h  mp.h  tk.h
kryon/: hello.dis  kryonc  main.c  mkfile  test_debug.b
lib/: emptydirs  tbsetup  wmsetup
lib9/: mallocz.c  mkfile-Posix
libdraw/: init.c  mkfile
libinterp/: cryptstub.c  dec.c  draw.c  heap.c  readmod.c  runt.c  stack.c  tk.c  xec.c
libkrb/: krb_loader.c  krb_parser.c  krb_types.h  krb_widget.c  mkfile
libkrb_render/: krb_draw.c  mkfile  text_renderer.c  widget_renderers.c
libkrb_runtime/: layout_engine.c  mkfile  property_resolver.c  runtime.c  style_engine.c  theme_engine.c  widget_tree.c
libkrb_shell/: krb_shell_env.c  krb_shell_exec.c  krb_shell_runtime.c  krb_shell_types.c  mkfile
libmemdraw/: draw.c
libmemlayer/: draw.c
libtk/: canvs.c  canvs.h  colrs.c  textw.c  utils.c  windw.c
mkfiles/: mkdis  mkfile-Linux-amd64  mkfile-Plan9-amd64  mkmany-rc  mkmany-sh  mkone-nt  mkone-rc  mkone-sh
module/: cci.m  graphics.b  graphics.m  kryon.m  palm.m  tkclient.m  yaml.m
scripts/: build  configure  run
utils/: run-kryon.sh
(+148 files in other folders)
